# ai-safety-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check.sh  cloudbuild-agent.yaml  combined_output_schema.py  docker-compose.yml  pyproject.toml  requirements.txt  run-experiment.sh  run.sh  test_real_api.py
.github/workflows/: ci.yml  deploy-gke.yaml  deploy.yaml
agent/: Dockerfile  command_client.py  requirements.txt  run_loop.py
datadog_integration/: dashboard.json  deploy_datadog.py  llm_observability.py  monitors.json  test_observability.py
gcp-deploy/: cloudbuild-experiment.yaml  datadog-values.yaml  run-experiment.sh  setup.sh
gcp-deploy/k8s/: experiment-job.yaml  namespace.yaml  service-account.yaml  setup-gke.sh
inspect_evals/: compose.yaml  numberguess.py
runners/: gemini_client.py
scenarios/numberguess_game/: command_server.py
streamlit_app/: Dockerfile  app.py  requirements.txt
tests/: test_gemini_client.py
