[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-safety-evals"
version = "0.1.0"
description = "AI Safety Evaluation Framework for Datadog Hackathon"
requires-python = ">=3.11"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | outputs
  | __pycache__
)/
'''

# Ruff configuration (replaces flake8, isort, pylint)
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "outputs",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (common in tests)
    "T201",  # print statements (we use them for logging)
    "S110",  # try-except-pass (intentional in error recovery code)
    "S602",  # subprocess with shell=True (required for scenarios)
    "S603",  # subprocess without shell check (agent execution is the feature)
    "B904",  # raise without from (simplified error handling)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok in __init__.py

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "openai.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

# Bandit configuration (security linting)
[tool.bandit]
exclude_dirs = [".git", ".venv", "venv", "outputs", "__pycache__"]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B110",  # try_except_pass - intentional in error recovery code
    "B404",  # subprocess import - required for scenario execution
    "B601",  # paramiko_calls - not applicable
    "B602",  # subprocess with shell=True - required for agent command execution
    "B603",  # subprocess without shell check - agent execution is the feature
]

[tool.bandit.assert_used]
skips = ['*/test_*.py', '*_test.py']
